--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#Icon1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitles">Strategy</h3>
               <p class="benefits-text texts">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#Icon2"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitles">Punctuality</h3>
               <p class="benefits-text texts">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +87,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#Icon3"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitles">Diligence</h3>
               <p class="benefits-text texts">
                 Research and confirm brands that present the strongest digital
@@ -84,6 +99,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#Icon4"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitles">Technogies</h3>
               <p class="benefits-text texts">
                 Design practice focused on digital experiences. We bring forth a
@@ -107,6 +127,32 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle subtitles">Mark Guerrero</h3>
                 <p class="team-text texts">Product Designer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -119,6 +165,32 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle subtitles">Tom Ford</h3>
                 <p class="team-text texts">Frontend Developer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -131,6 +203,32 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle subtitles">Camila Garcia</h3>
                 <p class="team-text texts">Marketing</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -143,6 +241,32 @@
               <div class="team-wrapper">
                 <h3 class="team-subtitle subtitles">Daniel Wilson</h3>
                 <p class="team-text texts">UI Designer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="team-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -226,14 +350,46 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-space">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-box">
+          <p class="footer-desc">Social media</p>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link"
+                ><svg class="footer-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#instagram"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link"
+                ><svg class="footer-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link"
+                ><svg class="footer-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link"
+                ><svg class="footer-soc-icon" width="16" height="16">
+                  <use href="./images/icons.svg#linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
