--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="benefits-item">
               <div class="benefits-container">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons.svg#Icon1"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitles">Strategy</h3>
@@ -77,7 +77,7 @@
             <li class="benefits-item">
               <div class="benefits-container">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons.svg#Icon2"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitles">Punctuality</h3>
@@ -89,7 +89,7 @@
             <li class="benefits-item">
               <div class="benefits-container">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons.svg#Icon3"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitles">Diligence</h3>
@@ -101,7 +101,7 @@
             <li class="benefits-item">
               <div class="benefits-container">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons.svg#Icon4"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitles">Technogies</h3>
