--- a/index.html
+++ b/index.html
@@ -277,55 +277,95 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img src="./images/img1.jpg" alt="App" width="360" height="300" />
+              <div class="portfolio-tumba">
+                <img
+                  src="./images/img1.jpg"
+                  alt="App"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-desk">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-subtitle subtitles">Banking App</h3>
                 <p class="portfolio-text texts">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img2.jpg"
-                alt="Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-tumba">
+                <img
+                  src="./images/img2.jpg"
+                  alt="Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-desk">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-subtitle subtitles">Cashless Payment</h3>
                 <p class="portfolio-text texts">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img3.jpg"
-                alt="laptop"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-tumba">
+                <img
+                  src="./images/img3.jpg"
+                  alt="laptop"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-desk">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-subtitle subtitles">Meditation App</h3>
                 <p class="portfolio-text texts">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img4.jpg"
-                alt="Taxi"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-tumba">
+                <img
+                  src="./images/img4.jpg"
+                  alt="Taxi"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-desk">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-subtitle subtitles">Taxi Service</h3>
                 <p class="portfolio-text texts">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img5.jpg"
-                alt="phone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-tumba">
+                <img
+                  src="./images/img5.jpg"
+                  alt="phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-desk">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-subtitle subtitles">
                   Screen Illustrations
@@ -334,12 +374,19 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img6.jpg"
-                alt="girl"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-tumba">
+                <img
+                  src="./images/img6.jpg"
+                  alt="girl"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-desk">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-subtitle subtitles">Online Courses</h3>
                 <p class="portfolio-text texts">Marketing</p>
